microservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      hostNetwork: false
      hostPID: false
      securityContext:
        fsGroup: 2000
        runAsUser: 1000
        runAsGroup: 3000
      containers:
      - name: api
        image: node:16
        securityContext:
          runAsUser: 1000
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 3000
      volumes: []
