test-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-web-app
  template:
    metadata:
      labels:
        app: test-web-app
    spec:
      containers:
      - name: web
        image: nginx:latest
        ports:
        - containerPort: 80
        
        # WILL BE FIXED: Running as root
        securityContext:
          runAsUser: 0
          privileged: true  # WILL BE FIXED: Privileged container
        
        # WILL BE FIXED: No resource limits
        resources: {}
        
---
apiVersion: v1
kind: Service
metadata:
  name: test-web-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: test-web-app
